--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@apollo/client": "^3.0.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.1",
     "apollo-angular": "^5.0.0",
     "graphql": "^16",
+    "mapbox-gl": "^2.15.0",
     "ol": "^7.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -33,6 +35,8 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.4",
+    "@types/mapbox-gl": "^2.7.13",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
